--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.logaritex.ai</groupId>
 	<artifactId>assistant-api</artifactId>
-	<version>0.3.1-SNAPSHOT</version>
+	<version>0.3.3-SNAPSHOT</version>
 
 	<name>assistant-api</name>
 	<description>OpenAI Assistent API Client</description>
@@ -68,11 +68,11 @@
 			<artifactId>spring-web</artifactId>
 			<version>${spring-framework.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webflux</artifactId>
-			<version>${spring-framework.version}</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework</groupId>-->
+<!--			<artifactId>spring-webflux</artifactId>-->
+<!--			<version>${spring-framework.version}</version>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
